# graveyard

./: README.md
ad_monere/: .env  README.md
ad_monere/src/: error.rs  logger.rs  main.rs
ad_monere/src/cli/: app.rs  mod.rs
ad_monere/src/common/: mod.rs  rate_sx.rs
ad_monere/src/tui/: mod.rs
audiosplit/: Cargo.toml
audiosplit/src/: errors.rs  main.rs  utils.rs
audiosplit/src/decoders/: mod.rs  vorbis.rs
audire/: Cargo.toml
audire/src/: main.rs
calculus/: Cargo.toml
calculus/src/: lib.rs
calculus/src/space/: vec2.rs
calculus/src/tests/: mat2.rs  vec2.rs
crypto_moderatoris/: .env  .gitignore  Cargo.toml  README.md
crypto_moderatoris/src/: app.rs  cli.rs  error.rs  logger.rs  main.rs  scraping.rs  tui.rs
literae-meus/: Cargo.toml  README.md
literae-meus/assets/test/: README.md
literae-meus/assets/test/src/: SUMMARY.md  syntax-extensions.md
literae-meus/src/: errors.rs  lib.rs  main.rs  tags.rs  utils.rs
literae-meus/src/parsers/: mod.rs  raw.rs  tex.rs
mixerrs/: .notes.txt  Cargo.toml  README.md
mixerrs/src/: error.rs  main.rs
mixerrs/src/_tests/: cli_parser.rs
mixerrs/src/cli/: list.rs  mod.rs  parser.rs
nota/: Cargo.toml
nota/src/: cmd.rs  conf.rs  error.rs  main.rs  tui.rs
