[package]
name = "crypto_moderatoris"
version = "0.1.0"
edition = "2021"

[dependencies]
# system files
config = "0.14.1"
dirs = "5.0.1"
dotenv = "0.15.0"

# serialization
serde = { version = "1.0.213", features = ["derive"] }
#serde_json = "1.0.132"

# web request
reqwest = { version = "0.12.8", features = ["blocking"] }

# error handling
thiserror = "1.0.65"

# CLI
clap = { version = "4.5.20", features = ["derive"] }

# TUI
ratatui = "0.29.0"

# logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"

# const declaration
lazy_static = "1.5.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
